chore: another attempt to fix multiplatform builds